NetBSD Problem Report #50695
From www@NetBSD.org Sat Jan 23 11:00:15 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
by mollari.NetBSD.org (Postfix) with ESMTPS id E06217ABEC
for <gnats-bugs@gnats.NetBSD.org>; Sat, 23 Jan 2016 11:00:14 +0000 (UTC)
Message-Id: <20160123110013.C3B827ACB3@mollari.NetBSD.org>
Date: Sat, 23 Jan 2016 11:00:13 +0000 (UTC)
From: coypu@sdf.org
Reply-To: coypu@sdf.org
To: gnats-bugs@NetBSD.org
Subject: ctrl-c in su password input breaks shell (bash, csh)
X-Send-Pr-Version: www-1.0
>Number: 50695
>Category: bin
>Synopsis: ctrl-c in su password input breaks shell (bash, csh)
>Confidential: no
>Severity: non-critical
>Priority: low
>Responsible: bin-bug-people
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sat Jan 23 11:05:00 +0000 2016
>Closed-Date: Fri Feb 26 22:03:19 +0000 2016
>Last-Modified: Fri Feb 26 22:03:19 +0000 2016
>Originator: coypu
>Release: 7.99
>Organization:
>Environment:
NetBSD 7.99.25
>Description:
Using 'su' in terminal, if I use ctrl-c in password prompt, it will cause the terminal to stop producing newlines.
this happens in csh and bash (from pkgsrc), but not in other shells.
>How-To-Repeat:
>Fix:
>Release-Note:
>Audit-Trail:
From: coypu@SDF.ORG
To: gnats-bugs@netbsd.org
Cc:
Subject: Re: bin/50695: ctrl-c in su password input breaks shell (bash, csh)
Date: Sun, 31 Jan 2016 23:08:15 +0000
This problem is in password prompts all over NetBSD and not just
csh/bash.
I have experienced the same issue in booting up NetBSD and using Ctrl-C
in the password rather than typing my password (without even logging in
the first place).
Please consider changing the code near src/lib/libc/gen/getpass.c:293 (from
-current, if it was recently modified).
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/50695 CVS commit: src/lib/libc/gen
Date: Sun, 31 Jan 2016 18:41:38 -0500
Module Name: src
Committed By: christos
Date: Sun Jan 31 23:41:38 UTC 2016
Modified Files:
src/lib/libc/gen: getpass.c
Log Message:
PR/50695: coypu: ctrl-c in su password input breaks shell (bash, csh)
Always restore the tty settings.
To generate a diff of this commit:
cvs rdiff -u -r1.29 -r1.30 src/lib/libc/gen/getpass.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 01 Feb 2016 02:55:47 +0000
State-Changed-Why:
christos fixed it, please check
From: Rin Okuyama <okuyama@flex.phys.tohoku.ac.jp>
To: gnats-bugs@NetBSD.org
Cc:
Subject: Re: bin/50695 (ctrl-c in su password input breaks shell (bash, csh))
Date: Wed, 3 Feb 2016 06:13:32 +0900
This problem occurs also on NetBSD 7.0. Please pull up fix to
netbsd-7 and netbsd-7-0. (6.x.x are not affected.)
From: coypu@SDF.ORG
To: gnats-bugs@netbsd.org
Cc:
Subject: Re: bin/50695: ctrl-c in su password input breaks shell (bash, csh)
Date: Sun, 7 Feb 2016 07:30:40 +0000
Looks good, thanks!
State-Changed-From-To: feedback->open
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 15 Feb 2016 12:01:06 +0000
State-Changed-Why:
feedback received, pullups needed
From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/50695 CVS commit: [netbsd-7] src/lib/libc/gen
Date: Fri, 26 Feb 2016 21:57:12 +0000
Module Name: src
Committed By: snj
Date: Fri Feb 26 21:57:12 UTC 2016
Modified Files:
src/lib/libc/gen [netbsd-7]: getpass.c
Log Message:
Pull up following revision(s) (requested by christos in ticket #1101):
lib/libc/gen/getpass.c: revision 1.30
PR/50695: coypu: ctrl-c in su password input breaks shell (bash, csh)
Always restore the tty settings.
To generate a diff of this commit:
cvs rdiff -u -r1.28 -r1.28.2.1 src/lib/libc/gen/getpass.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->closed
State-Changed-By: snj@NetBSD.org
State-Changed-When: Fri, 26 Feb 2016 22:03:19 +0000
State-Changed-Why:
Pulled up to netbsd-7, so this will be fixed in 7.1. Not quite
critical enough to justify a pullup to netbsd-7-0.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.