PR/50695: coypu: ctrl-c in su password input breaks shell (bash, csh) Always restore the tty settings.